add auth flow + some tests
